# Agente

agente_prueba/: README.md  pyproject.toml
agente_prueba/output/: financial_report.md  report.md
agente_prueba/src/agente_prueba/: crew.py  main.py
agente_prueba/src/agente_prueba/config/: agents.yaml  tasks.yaml
