[project]
name = "agente_prueba"
version = "0.1.0"
description = "agente_prueba using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
agente_prueba = "agente_prueba.main:run"
run_crew = "agente_prueba.main:run"
train = "agente_prueba.main:train"
replay = "agente_prueba.main:replay"
test = "agente_prueba.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
